@@ -1,6 +1,7 @@
 0.24.0
 ------
 
+* Added `BaseResponse.calls` to access calls data of a separate mocked request. See #664
 * Added `real_adapter_send` parameter to `RequestsMock` that will allow users to set
   through which function they would like to send real requests
 * Added support for re.Pattern based header matching.
